Revamp: OpenAPI definition for Async APIs
